<resources>

    <string name="app_name">地图淘宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="task_coll_point">信息采集点</string>
    <string name="add_app">添加新应用</string>
    <string name="coll_do_task">做任务</string>
    <string name="create_user">创建子账号</string>
    <string name="user_info">我的信息</string>
    <string name="the_more">更多</string>
    <string name="the_do_task">做任务</string>
    <string name="the_new_task">新任务</string>
    <string name="the_about_task">随手拍</string>
    <string name="the_my_task">我的任务</string>
    <string name="the_info_point">信息采集点</string>
    <string name="the_confirm">确定</string>
    <string name="the_cancle">取消</string>
    <string name="dialog_net">数据加载中......</string>
    <string name="dialog_upload">即将提交采集点数据，请确保开启WIFI网络已节省流量，是否继续？</string>
    <string name="dialog_close">即将提交采集点数据，请确保开启WIFI网络已节省流量，是否继续？</string>

    <!-- code -->
    <string name="code_f1">账号已过期,请重新登录</string>
    <string name="code_f2">账号无授权</string>
    <string name="code_1">成功</string>
    <string name="code_2">尚未登录</string>
    <string name="code_3">参数非法：经纬度不能为空</string>
    <string name="code_4">无权限访问指定记录</string>
    <string name="code_5">账户ID、密码不能为空</string>
    <string name="code_6">账户ID或密码错误请重新输入</string>
    <string name="code_7">指定账户已经过期</string>
    <string name="code_8">您没有权限登录此系统</string>
    <string name="code_9">重复创建子账号</string>
    <string name="code_1011">账户已经注销或过期</string>
    <string name="code_201">指定任务不存在</string>
    <string name="code_204">任务状态非法</string>
    <string name="code_207">任务id不能为空</string>
    <string name="code_208">内容不能为空</string>
    <string name="code_209">任务结果为空</string>
    <string name="code_2011">记录起始不能小于0</string>
    <string name="code_2012">记录总数必须大于0</string>
    <string name="code_4020">用户id不能为空</string>
    <string name="code_4021">新密码不可为空</string>
    <string name="code_4023">当前密码不可为空</string>
    <string name="code_4024">当前密码输入不正确</string>
    <string name="code_4025">更新异常</string>
    <string name="code_403">客户端获取联系人失败</string>
    <string name="code_701">执行人id不能为空</string>
    <string name="code_501">无法找到配置文件</string>
    <string name="code_301">电子眼id不能为空</string>
    <string name="code_302">电子眼结果为空</string>
    <string name="code_801">系统异常</string>
    <string name="code_210">任务已过期</string>
    <string name="code_211">任务为单次任务,无法多次上传电子眼</string>
    <string name="code_212">此任务已被抢注，不能再被抢注</string>
    <string name="code_213">此任务已被他人提交，无法提交</string>
    
    <!-- code -->

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- update -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    
    <string name="dialog_imgdelete">确定要删除该图片？</string>
    <string name="dialog_wait">请稍候...</string>
    
    <!-- 创建子账号 -->
    <string-array name="mw_spinnername">
        <item>男</item>
        <item>女 </item>
    </string-array>
</resources>